# exercices_rust

./: .clippy.toml  Cargo.toml  README.md  build.rs
src/: binary_tree.rs  binary_tree_ex1.rs  main.rs  rc_smart_pointer.rs  resume_ex.rs  resume_exercices.rs
src/box_pointers/: cons_list.rs
src/error_handling/: mod.rs  options.rs  results.rs  user_option.rs
src/exercices/: README.md  main.rs  mod.rs
src/exercices/02_error_handling/: user_option.rs
src/exercices/03_hashmaps/: hashmap.rs
src/exercices/04_box_pointers/: binary_tree.rs
src/exercices/05_fn_pointers/: fnmut.rs  mod.rs
src/exercices/08_refcell_pointer/: refcell.rs
src/exercices/_01_variables/: variables1.rs  variables2.rs  variables3.rs  variables4.rs
src/exercices/_02_conditions/: README.md  condition1.rs  condition2.rs  condition3.rs  mod.rs
src/exercices/_03_functions/: function1.rs  function3.rs  mod.rs
src/exercices/_04_boucles/: boucle2.rs
src/exercices/_05_vectors/: README.md  mod.rs  vector1.rs  vector2.rs
src/exercices/_07_pattern_matching/: mod.rs  pattern_matching2.rs  pattern_matching3.rs
src/exercices/_08_strings/: README.md
src/exercices/_09_hashmaps/: README.md  hashmap1.rs
src/exercices/_10_structs/: struct1.rs
src/exercices/_11_generics_types/: mod.rs
src/exercices/_11_traits/: trait1.rs
src/fn_pointers/: event_manager.rs  mod.rs
src/fnmut_pointers/: fnmut.rs
src/loops/: iterations.rs  sum.rs
src/mutex_pointers/: mutex.rs
src/rc_pointers/: mod.rs  rc_shared_data.rs
src/refcell_pointer/: refcell.rs
src/solutions/: main.rs  resume_solution.rs
(+153 files in other folders)
